<?xml version="1.0"?>
<package>
  <name>SRVSS</name>
  <version>0.0.0</version>
  <description>The SRVSS package</description>

  <maintainer email="yder@iai.co.il">Yuval</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
<build_depend>tinyxml</build_depend>
<build_depend>cmake_modules</build_depend>
</package>
