<?xml version="1.0"?>
<package>
  <name>hammvee_with_velodyne</name>
  <version>0.0.0</version>
  <description>The hammvee package</description>

  <maintainer email="Akiva@gmail.com">Akiva</maintainer>

  

  <license>TODO</license>



  <!-- Build and run dependant libraries -->
  <buildtool_depend>catkin</buildtool_depend>   <!-- Compilation Library -->
  <build_depend>geometry_msgs</build_depend>    <!-- Transfering Geometry Type Messages Library -->
  <build_depend>gazebo_ros</build_depend>	<!-- Gazebo Library -->
  <build_depend>roscpp</build_depend>		<!-- Ros Library -->
  <build_depend>tf</build_depend>		<!-- Transformation Library -->
  <build_depend>std_msgs</build_depend>		<!-- Transfering Standard Type Messages Library -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
